--- a/k8s/helm-crd/templates/k8s.cloudogu.com_backupschedules.yaml
+++ b/k8s/helm-crd/templates/k8s.cloudogu.com_backupschedules.yaml
@@ -3,12 +3,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: v0.18.0
   name: backupschedules.k8s.cloudogu.com
   labels:
     app: ces
-    app.kubernetes.io/name: k8s-backup-operator
-    k8s.cloudogu.com/part-of: backup
+    app.kubernetes.io/name: k8s-backup-operator-crd
 spec:
   group: k8s.cloudogu.com
   names:
