--- a/k8s/helm-crd/templates/k8s.cloudogu.com_restores.yaml
+++ b/k8s/helm-crd/templates/k8s.cloudogu.com_restores.yaml
@@ -3,10 +3,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.14.0
+    controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app: ces
-    app.kubernetes.io/name: k8s-backup-operator
+    app.kubernetes.io/name: k8s-backup-operator-crd
     k8s.cloudogu.com/part-of: backup
   name: restores.k8s.cloudogu.com
 spec:
